--- a/index.html
+++ b/index.html
@@ -1,7 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>F3r10</title>
+        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/nav.css">
+    </head>
+    <body>
+    	<header>
+    		<div class="logo">
+    			<img src="img/logo.jpg" alt="F3r10">
+    		</div>
+    		<div class="slogan">
+    			F3R10
+    		</div>
+    	</header>
+    	<nav>
+    		<ul class="menu">
+  				<li><a href="#" class="active">Home</a></li>
+  				<li><a href="#">Presentaciones</a></li>
+  				<li><a href="#">Proyectos</a></li>
+  				<li><a href="#">Contact</a></li>
+  				<li class="slider"></li>
+			</ul>
+    	</nav>
+
+    	<main>
+    		<section>
+    			<article>
+    				About me
+    			</article>
+    		</section>
+    	</main>
+
+    	<aside>
+    		<section>
+    			Blogs
+    		</section>
+    		<section>
+    			Redes sociales
+    		</section>
+    	</aside>
+    	<footer>
+    		<h3>Powered by F3r10</h3>
+    	</footer>
+        
+        <script src="js/main.js"></script>
+    </body>
 </html>
