--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>F3r10</title>
-        <link rel="stylesheet" href="../css/estilos.css">
-        <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../css/nav.css">
+        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/nav.css">
     </head>
     <body>
     	<header>
