--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   				<li><a href="#" class="active">Home</a></li>
   				<li><a href="#">Presentaciones</a></li>
   				<li><a href="#">Proyectos</a></li>
-  				<li><a href="#">Contact</a></li>
+  				<li><a href="#">Contactos</a></li>
   				<li class="slider"></li>
 			</ul>
     	</nav>
