funcion en los datos de uservoice

--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@ UserVoice.push(['set', {
 
 // Identify the user and pass traits
 // To enable, replace sample data with actual user traits and uncomment the line
+function datos ()
+{
+  var nombre = 'Fernando'
 UserVoice.push(['identify', {
   email:      'john.doe@example.com', // User’s email address
-  name:       'John Doe', // User’s real name
+  name:       nombre, // User’s real name
   created_at: 1364406966, // Unix timestamp for the date the user signed up
   id:         123, // Optional: Unique id of the user (if set, this should not change)
   type:       'Owner', // Optional: segment your users by type
@@ -82,6 +85,7 @@ UserVoice.push(['identify', {
     plan:         'Enhanced' // Plan name for the account
   }
 }]);
+}
 
 // Add default trigger to the bottom-right corner of the window:
 UserVoice.push(['addTrigger', { mode: 'contact', trigger_position: 'bottom-right' }]);
